# regression_timeserie

./: .gitignore  README.md  pyproject.toml
src/: ETL.py  Feature_Engineering.py  Modelo.py  data.py  feature_engineering.py  modelo.py  multistep.py
