[tool.poetry]
name = "regression_timeserie"
version = "0.1.0"
description = ""
authors = ["Nicolas Nuñez Manzano <nico.nm30@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.5.2"
yfinance = "^0.2.3"
numpy = "^1.24.1"
pandas-datareader = "^0.10.0"
lightgbm = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
